--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -51,3 +51,7 @@ all:
         mon_stack_host:
           ansible_host: localhost
 
+    cleanup:
+      hosts:
+        cleanup_host:
+          ansible_host: localhost
