--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -13,10 +13,15 @@ all:
     helm_repos:
       - name: bitnami 
         url: 'https://charts.bitnami.com/bitnami'
+
       - name: prometheus-community
         url: 'https://prometheus-community.github.io/helm-charts'
+
       - name: grafana
         url: 'https://grafana.github.io/helm-charts'
+        
+      - name: argo
+        url: 'https://argoproj.github.io/argo-helm'
       
     helm_plugins:
       - name: helm-diff
@@ -54,4 +59,9 @@ all:
     cleanup:
       hosts:
         cleanup_host:
+          ansible_host: localhost
+
+    argo_cd:
+      hosts:
+        argo_cd_host:
           ansible_host: localhost
