Fix kube-prometheus-stack Prometheus endpoints DOWN issues: 1. CoreDNS 2. kube-controller-manager 3. kube-prometheus-stack-kube-etcd 4. kube-prometheus-stack-kube-scheduler 5. kube-proxy

--- a/roles/patch_coredns/tasks/patch.yml
+++ b/roles/patch_coredns/tasks/patch.yml
@@ -27,6 +27,7 @@
                   pods insecure
                   fallthrough in-addr.arpa ip6.arpa
               }
+              prometheus :9153
               forward . 8.8.8.8 1.1.1.1 {
                   max_concurrent 1000
               }
@@ -44,7 +45,7 @@
     namespace: kube-system
     name: coredns
     wait: yes
-    wait_timeout: 60
+    wait_timeout: 120
     definition:
       spec:
         template:
