--- a/roles/init_cluster/tasks/main.yml
+++ b/roles/init_cluster/tasks/main.yml
@@ -47,3 +47,63 @@
     src: /tmp/kubeadm_join.sh
     dest: /tmp/k8s-join-command/
     flat: true
+
+# ----------------------- Enable Monitoring Endpoints ----------------------- #
+
+# kube-controller-manager endpoint
+# if prometheus is not running at the master node. 0.0.0.0 makes the metrics endpoint 
+# accessible from any interface, so it is better to secure it (TODO)
+- name: Change bind-address to 0.0.0.0 for kube-controller-manager 
+  ansible.builtin.replace:
+    path: /etc/kubernetes/manifests/kube-controller-manager.yaml
+    regexp: '^(\s*)- --bind-address=.*'
+    replace: '\1- --bind-address=0.0.0.0'
+
+# exposes metrics over HTTPS on secure-port 10257
+- name: Ensure secure port is enabled on kube-controller-manager
+  ansible.builtin.lineinfile:
+    path: /etc/kubernetes/manifests/kube-controller-manager.yaml
+    line: "    - --secure-port=10257"
+    insertafter: '^ *- --use-service-account-credentials'
+    create: no
+
+# etcd endpoint
+# if prometheus is not running at the master node. 0.0.0.0 makes the metrics endpoint 
+# accessible from any interface, so it is better to secure it (TODO)
+- name: Update etcd metrics listen address to allow scraping
+  ansible.builtin.replace:
+    path: /etc/kubernetes/manifests/etcd.yaml
+    regexp: '--listen-metrics-urls=http://127\.0\.0\.1:2381'
+    replace: '--listen-metrics-urls=http://0.0.0.0:2381'
+
+# kube-scheduler endpoint
+# if prometheus is not running at the master node. 0.0.0.0 makes the metrics endpoint 
+# accessible from any interface, so it is better to secure it (TODO)
+- name: Allow Prometheus to scrape kube-scheduler metrics by changing bind address
+  ansible.builtin.replace:
+    path: /etc/kubernetes/manifests/kube-scheduler.yaml
+    regexp: '--bind-address=127\.0\.0\.1'
+    replace: '--bind-address=0.0.0.0'
+
+# kube-proxy endpoint
+# if prometheus is not running at the master node. 0.0.0.0 makes the metrics endpoint 
+# accessible from any interface, so it is better to secure it (TODO)
+- name: Enable metrics endpoint for kube-proxy
+  ansible.builtin.shell: |
+    kubectl -n kube-system get configmap kube-proxy -o yaml | \
+    sed 's/metricsBindAddress: ""/metricsBindAddress: 0.0.0.0:10249/' | \
+    kubectl apply -f -
+  args:
+    executable: /bin/bash
+  environment:
+    KUBECONFIG: /etc/kubernetes/admin.conf
+
+- name: Restart kube-proxy pods
+  ansible.builtin.shell: |
+    kubectl -n kube-system delete pod -l k8s-app=kube-proxy
+  environment:
+    KUBECONFIG: /etc/kubernetes/admin.conf
+
+
+
+
