Fix Prometheus UI endpoints DOWN issues: 1. CoreDNS 2. kube-controller-manager 3. kube-prometheus-stack-kube-etcd 4. kube-prometheus-stack-kube-scheduler 5. kube-proxy

--- a/playbooks/deploy/apache.yml
+++ b/playbooks/deploy/apache.yml
@@ -48,14 +48,16 @@
                 - k8s-lab # <--- still targets Apache's namespace, TODO - prameterize it
             endpoints:
               - port: http
-                path: /server-status?auto
+                path: /server-status
+                params:
+                  auto: [""]  # query string auto
                 interval: 15s
                 scheme: http
               - port: https
-                path: /server-status?auto
+                path: /server-status
+                params:
+                  auto: [""]  # query string auto
                 interval: 15s
                 scheme: https
                 tlsConfig:
                   insecureSkipVerify: true
-
- 
