--- a/inventory/group_vars/apache.yml
+++ b/inventory/group_vars/apache.yml
@@ -10,28 +10,36 @@ helm_chart_timeout: 15m
 
 # apache release values (dict)
 values:
-   service:
-      type: NodePort
-      # ports:
-      #   - name: http
-      #     port: 80
-      #     targetPort: http  # this maps tp target containerPort named 'http', which is 8080 in bitnami/apache helm chart
-      #     nodePort: 31080
-      #   - name: https
-      #     port: 443
-      #     targetPort: https  # this maps tp target containerPort named 'https', which is 8443 in bitnami/apache helm chart
-      #     nodePort: 31443
-      nodePorts:
-        http: 31080
-        https: 31443
- 
-   extraVolumes:
-      - name: status-config
-        configMap:
-         name: apache-status-config
+  service:
+    type: NodePort
+    nodePorts:
+      http: 31080
+      https: 31443
+    ports:
+      http:
+        port: 8080         # This is the port exposed by the Service inside the cluster
+        targetPort: http   # This must match the container's named port (usually "http")
+        nodePort: 31080    # This is the external NodePort to access Apache via <NodeIP>:31080
+        protocol: TCP
+      https:
+        port: 8443
+        targetPort: https
+        nodePort: 31443
+        protocol: TCP
+    labels:
+      app.kubernetes.io/name: apache
+      app.kubernetes.io/instance: my-apache-nodeport
 
-   extraVolumeMounts:
-      - name: status-config
-        mountPath: /vhosts/status.conf
-        subPath: status.conf
-        readOnly: true
+  extraVolumes:
+    - name: status-config
+      configMap:
+        name: apache-status-config
+
+  extraVolumeMounts:
+    - name: status-config
+      mountPath: /opt/bitnami/apache/conf/custom/status.conf
+      subPath: status.conf
+      readOnly: true
+
+  extraConfiguration: |
+    Include "/opt/bitnami/apache/conf/custom/status.conf"  
