major refactor - consolidated k8s cluster creation into two roles: pre_requisites and bootstrap_cluster

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -6,6 +6,7 @@ all:
     ansible_python_interpreter: '/usr/bin/python3.9'
     k8s_user: iacuser
     k8s_version: '1.28'
+    k8s_cluster_name: 'ai-lab'
     crio_version: '1.28'
     os_stream: CentOS_9_Stream
     calico_version: '3.30.0'
@@ -32,12 +33,18 @@ all:
   children:
     master:
       hosts:
-        192.168.184.134:
-        # 192.168.184.138:
+        # 192.168.184.134:
+        192.168.184.138:
     workers:
       hosts:
-        192.168.184.135:
-        # 192.168.184.140:
+        # 192.168.184.135:
+        192.168.184.141:
+
+    controller:
+      hosts:
+        localhost:
+          ansible_connection: local
+    
     # apps
     nginx:
       hosts:
