--- a/playbooks/setup/site.yml
+++ b/playbooks/setup/site.yml
@@ -1,19 +1,7 @@
 ---
 
-- name: System Prerequisite Playbook
-  ansible.builtin.import_playbook: k8s_sys_prereq.yml
+- name: k8s Pre-requisites Playbook
+  ansible.builtin.import_playbook: k8s_pre_requisites.yml
 
-- name: K8s Package Installation Playbook
-  ansible.builtin.import_playbook: k8s_instl_pkg.yml
-
-- name: K8s Container Runtime CRI-O Installation Playbook
-  ansible.builtin.import_playbook: k8s_instl_crio.yml
-
-- name: Include K8s System Assert Playbook
-  ansible.builtin.import_playbook: k8s_sys_assert.yml
-
-- name: K8s Cluster Creation Playbook
-  ansible.builtin.import_playbook: k8s_instl_cluster.yml
-
-- name: K8s Cluster Assert Playbook
-  ansible.builtin.import_playbook: k8s_cluster_assert.yml
+- name: K8s Cluster Bootstrap Playbook
+  ansible.builtin.import_playbook: k8s_bootstrap_cluster.yml
