Major refactor - kube-prometheus-stack role, adding ansible.cfg for the project

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -11,6 +11,8 @@ all:
     os_stream: CentOS_9_Stream
     calico_version: '3.30.0'
 
+    role_path: '../../roles'  # role path related to the playbooks 
+
     helm_repos:
       - name: bitnami 
         url: 'https://charts.bitnami.com/bitnami'
