amajor refactor - pre_requisites role to handle local mirror registry

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -9,8 +9,21 @@ all:
     k8s_cluster_name: 'ai-lab'
     crio_version: '1.28'
     os_stream: CentOS_9_Stream
-    calico_version: '3.30.0'
-
+    calico_version: 'v3.30.0'
+    calico_images:
+      - node
+      - kube-controllers
+      - cni
+      - pod2daemon-flexvol
+      - typha
+      - csi
+      - node-driver-registrar
+    
+    local_registry_host: 'registry.iac-lab.local'
+    local_registry_port: '5000'
+    local_registry_ip: '192.168.184.137'  # Ansible controller IP
+    local_registry_name: 'local-registry'
+    
     role_path: '../../roles'  # role path related to the playbooks 
 
     helm_repos:
@@ -35,24 +48,28 @@ all:
   children:
     master:
       hosts:
-        # 192.168.184.134:
-        192.168.184.138:
+        master-node:
+          ansible_host: 192.168.184.143
+
     workers:
       hosts:
-        # 192.168.184.135:
-        192.168.184.141:
+        worker-node:
+          ansible_host: 192.168.184.138
 
+    local_mirror:
+      hosts:
+        mirror-node:
+     
     controller:
       hosts:
         localhost:
-          ansible_connection: local
-    
+       
     # apps
     nginx:
       hosts:
         nginx_host:
           ansible_host: localhost
-
+    
     mon_stack:
       hosts:
         mon_stack_host:
@@ -67,3 +84,11 @@ all:
       hosts:
         argo_cd_host:
           ansible_host: localhost
+
+  hosts:
+    localhost:
+      ansible_connection: local
+
+    mirror-node:
+      ansible_host: localhost  # Can later change to a remote IP
+      ansible_connection: local  # Remove or change to ssh when remote
