--- a/roles/bootstrap_cluster/tasks/install_calico.yml
+++ b/roles/bootstrap_cluster/tasks/install_calico.yml
@@ -2,7 +2,7 @@
 
 - name: Apply Calico CNI with Overlay Networking mode using tigera-operator.yaml manifest
   ansible.builtin.shell: >
-    kubectl apply --server-side --force-conflicts -f https://raw.githubusercontent.com/projectcalico/calico/v{{ calico_version }}/manifests/{{ item }}
+    kubectl apply --server-side --force-conflicts -f https://raw.githubusercontent.com/projectcalico/calico/{{ calico_version }}/manifests/{{ item }}
   loop:
     - 'operator-crds.yaml'    # Custom Resource Definitions (CRDs)
     - 'tigera-operator.yaml'  # Tigera Calico Operator
@@ -25,6 +25,7 @@
       metadata:
         name: default
       spec:
+        registry: "{{ local_registry_host }}:{{ local_registry_port }}"
         calicoNetwork:
           bgp: Disabled
           ipPools:
