--- a/roles/bootstrap_cluster/tasks/main.yml
+++ b/roles/bootstrap_cluster/tasks/main.yml
@@ -13,10 +13,10 @@
 - ansible.builtin.include_tasks: install_calico.yml
   when: "'master' in group_names"
 
-# - ansible.builtin.include_tasks: patch_calico.yml
-#   when: "'master' in group_names"
-
 - ansible.builtin.include_tasks: patch_coredns.yml
+  when: "'master' in group_names"
+
+- ansible.builtin.include_tasks: cluster_readiness.yml
   when: "'master' in group_names"
 
 - ansible.builtin.include_tasks: enable_endpoints.yml
