--- a/roles/pre_requisites/tasks/main.yml
+++ b/roles/pre_requisites/tasks/main.yml
@@ -9,11 +9,11 @@
   ansible.builtin.include_tasks: instl_crio.yml
   when: "'master' in group_names or 'workers' in group_names" 
 
-- name: Configure Podman insecure registry
-  ansible.builtin.include_tasks: podman_http.yml
-  when: "'local_mirror' in group_names" 
+- name: Configure insecure registry to use http instead of default https
+  ansible.builtin.include_tasks: insecure_registry.yml
+  when: "'master' in group_names or 'workers' in group_names or 'local_mirror' in group_names"
   tags: local-mirror
-  
+
 - name: Set up local mirror for CRI-O on Ansible controller
   ansible.builtin.include_tasks: local_mirror_crio.yml
   when: "'master' in group_names or 'workers' in group_names or 'local_mirror' in group_names"
