--- a/playbooks/setup/site.yml
+++ b/playbooks/setup/site.yml
@@ -2,11 +2,8 @@
 
 - name: k8s Pre-requisites Playbook
   ansible.builtin.import_playbook: k8s_pre_requisites.yml
-  tags:
-    - pre
-    - local_mirror_one_time
+  tags: pre-req
 
 - name: K8s Cluster Bootstrap Playbook
   ansible.builtin.import_playbook: k8s_bootstrap_cluster.yml
-  tags:
-    - bootstrap
+  tags: bootstrap
