--- a/roles/bootstrap_cluster/tasks/assert_all.yml
+++ b/roles/bootstrap_cluster/tasks/assert_all.yml
@@ -1,5 +1,9 @@
 ---
 
+- name: Assert API server health (from controller)
+  ansible.builtin.include_tasks: assert/assert_apiserver_healthcheck.yml
+  when: "'controller' in group_names"
+
 - name: Assert kubelet is running
   ansible.builtin.include_tasks: assert/assert_kubelet.yml
   when: "'master' in group_names or 'workers' in group_names"
